@@ -1,4 +1,8 @@
 2011-05-15  Mike Blumenkrantz (discomfitor/zmike)
++eeze_disk_mount_wrapper_set
++eeze_disk_mount_wrapper_get
+Allow use of wrapper exes for mount commands (such as sudo)
+---------------------------------------
 +eeze_disk_udev_get_property
 +eeze_disk_udev_get_sysattr
 +eeze_disk_udev_walk_check_sysattr
